--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,10 +1,10 @@
 ﻿<Project>
 	<PropertyGroup>
-		<Version>2.0.0</Version>
+		<Version>2.0.0-dev001</Version>
 		<Authors>Oldli</Authors>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<LangVersion>Latest</LangVersion>
-		<RootNamespacePrefix>NetModular.Lib</RootNamespacePrefix>
+		<RootNamespacePrefix>Nmr.Lib</RootNamespacePrefix>
 		<AssemblyName>$(RootNamespacePrefix).$(MSBuildProjectName)</AssemblyName>
 		<RootNamespace>$(AssemblyName)</RootNamespace>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -14,6 +14,6 @@
 		<Company>南京臣文数字科技有限公司</Company>
 		<Copyright>Copyright：2020-2099</Copyright>
 		<PackageProjectUrl>https://www.17mkh.com/</PackageProjectUrl>
-		<RepositoryUrl>https://github.com/NetModular/NetModular.Utils</RepositoryUrl>
+		<RepositoryUrl>https://github.com/NetModular/NetModular.Lib.Utils</RepositoryUrl>
 	</PropertyGroup>
 </Project>
